# go-lgbm-serving

./: .dockerignore  .gitattributes  .gitignore  Makefile  README.md  go.mod  run.sh
.github/workflows/: ci.yml
clients/http/: scorer.http
clients/postman/: scorer.postman_collection.json
cmd/dump/: main_test.go
cmd/scorer/: main.go  main_test.go
docs/: DESIGN.md
fixtures/: README.md  codes.json
http/: scorer.http
k6/: Dockerfile.scorer  Makefile  README.md  bench.sh  docker-compose.limit.yml  docker-compose.yml  gen-rows.sh  gen_rows.py  gen_threshold.py  pyproject.toml  score-explain.js  summary.py
k6/results/: README.md  analysis.ipynb
k6/results/run-async-1000rps/: mem-limited.json  mem-limited.server.json  mem-unlimited.json  mem-unlimited.server.json  metadata.json  pg-limited.json  pg-limited.server.json  pg-unlimited.json  pg-unlimited.server.json
k6/results/run-async-4000rps/: mem-limited.json  mem-limited.server.json  mem-unlimited.json  mem-unlimited.server.json  metadata.json  pg-limited.json  pg-limited.server.json  pg-unlimited.json  pg-unlimited.server.json
k6/results/run-inline-1000rps/: mem-limited.json  mem-limited.server.json  mem-unlimited.json  mem-unlimited.server.json  metadata.json  pg-limited.json  pg-limited.server.json  pg-unlimited.json  pg-unlimited.server.json
k6/results/run-inline-4000rps/: mem-limited.json  mem-limited.server.json  mem-unlimited.json  mem-unlimited.server.json  metadata.json  pg-limited.json  pg-limited.server.json  pg-unlimited.json  pg-unlimited.server.json
k6/scripts/: bench.sh  gen-rows.sh  gen_rows.py  gen_threshold.py  score-explain.js
lgbm/: lgbm.go  parity_test.go  pool.go
notebooks/: README.md  rba_quality.ipynb  rba_quality.py  rba_validation.ipynb  rba_validation.py
paper/: .gitignore  README.md  latexmkrc  main.tex
paper/assets/: refs.bib
pipeline/: explain.go  explain_test.go  pipeline.go  pipeline_test.go
postman/: go-lgbm-serving-local.postman_environment.json  scorer.postman_collection.json
python/: fetch_creditcard.sh  pyproject.toml  train.py
reasoncode/: catalog.go  reasoncode_test.go
serving/: Makefile  README.md  go.mod
serving/lgbm/: lgbm.go  (+5 more)
training/: Makefile  README.md  fetch_rba.sh  lgbm_lib_path.py  multiclass_fixture.py  pyproject.toml  test_load_rba.py  train.py  validate.py  xparity.py
training/notebooks/: README.md  rba_quality.ipynb  rba_quality.py  rba_validation.ipynb  rba_validation.py
training/results/: analysis.ipynb  analysis.py  validation.json
training/scripts/: fetch_rba.sh  lgbm_lib_path.py  xparity.py
(+27 files in other folders)
