[project]
name = "lgbm-poc-train"
version = "0.1.0"
description = "Обучение модели LightGBM (домен RBA / сессионный фрод) и выгрузка артефактов для PoC паритета и подачи на Go"
requires-python = ">=3.12,<3.14"
dependencies = [
    "lightgbm>=4.0,<5",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "pandas>=2.0",
    "pyarrow>=14",
]

[dependency-groups]
dev = ["ruff>=0.6"]
# Группа для валидационного ноутбука (notebooks/); в подачу не входит.
analysis = ["matplotlib>=3.8", "jupytext>=1.16", "nbconvert>=7.16", "ipykernel>=6.29"]

[tool.ruff]
line-length = 100
