[project]
name = "lgbm-poc-train"
version = "0.1.0"
description = "Обучение модели LightGBM (домен RBA / сессионный фрод) и выгрузка артефактов для PoC паритета и инференса на Go"
# ==3.12.*: путь к lib_lightgbm в #cgo LDFLAGS содержит python3.12 (serving/lgbm/lgbm.go).
requires-python = "==3.12.*"
dependencies = [
    "lightgbm>=4.0,<5",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "pandas>=2.0",
    "pyarrow>=14",
]

[dependency-groups]
dev = ["ruff>=0.6", "pytest>=8"]
# Рендер results/analysis.ipynb из analysis.py (make notebook); расчётам не нужен.
analysis = ["matplotlib>=3.8", "jupytext>=1.16", "nbconvert>=7.16", "ipykernel>=6.29"]

[tool.ruff]
line-length = 100
